WP-9007 Fixes to the no padding on the quote for the homepage 3 across and a fix to the tablet gap

--- a/sass/conditionals/voices-filters.sass
+++ b/sass/conditionals/voices-filters.sass
@@ -474,6 +474,8 @@ a[class^="bg-"]:hover
       width: 30%
     +breakpoint($bp-for-phone-only)
       width: 86%
+    +breakpoint($bp-tablet-gap)
+      width: 30%
 
     .views-field-title
       color: $link-green
@@ -1345,6 +1347,7 @@ a[class^="bg-"]:hover
           width: 28%
         +breakpoint($bp-iphone6p-land)
           width: 40.6%
+
         .views-field-field-quote
           font-size: 18px
           padding: 36% 20px
